WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204497
Crash in WebCore::ServiceWorkerRegistrationKey::hash() const
https://bugs.webkit.org/show_bug.cgi?id=204497
Summary
Crash in WebCore::ServiceWorkerRegistrationKey::hash() const
youenn fablet
Reported
2019-11-22 02:01:19 PST
Nullpointer crash in WebCore: WebCore::ServiceWorkerRegistrationKey::hash() const
Attachments
Patch
(4.85 KB, patch)
2019-11-22 02:17 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2019-11-22 11:24 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-11-22 02:01:29 PST
<
rdar://problem/57348603
>
youenn fablet
Comment 2
2019-11-22 02:17:26 PST
Created
attachment 384135
[details]
Patch
Chris Dumez
Comment 3
2019-11-22 08:33:40 PST
Comment on
attachment 384135
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=384135&action=review
> Source/WebCore/workers/service/ServiceWorkerRegistrationKey.cpp:52 > + hashes[1] = m_scope.isNull() ? 0 : StringHash::hash(m_scope);
This part of the change looks wrong me.
youenn fablet
Comment 4
2019-11-22 11:24:05 PST
Created
attachment 384178
[details]
Patch
WebKit Commit Bot
Comment 5
2019-11-25 01:15:22 PST
Comment on
attachment 384178
[details]
Patch Clearing flags on attachment: 384178 Committed
r252849
: <
https://trac.webkit.org/changeset/252849
>
WebKit Commit Bot
Comment 6
2019-11-25 01:15:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug